Made updates to create file first before uploading

--- a/.github/workflows/compile-latex.yml
+++ b/.github/workflows/compile-latex.yml
@@ -12,11 +12,13 @@ jobs:
           root_file: cheat-sheet.tex
           compiler: pdflatex
           args: -interaction=nonstopmode -shell-escape
+      - run: mkdir -p public
+      - run: echo hello > public/cheat-sheet.pdf
       - name: Upload artifact
         uses: actions/upload-artifact@master
         with:
-          name: public/cheat-sheet.pdf
-          path: cheat-sheet.pdf
+          name: cheat-sheet.pdf
+          path: public/cheat-sheet.pdf
   deploy_ghpages:
     needs: build_latex
     runs-on: ubuntu-18.04
