--- a/.github/workflows/compile-latex.yml
+++ b/.github/workflows/compile-latex.yml
@@ -17,7 +17,8 @@ jobs:
         with:
           name: cheat-sheet.pdf
           path: cheat-sheet.pdf
-      - run: mv cheat-sheet.pdf ./public/cheat-sheet.pdf
+      - name: copy file
+        run: mv cheat-sheet.pdf ./public/cheat-sheet.pdf
   deploy_ghpages:
     needs: build_latex
     runs-on: ubuntu-18.04
