Making sure jekyll can still happen

--- a/.github/workflows/compile-latex.yml
+++ b/.github/workflows/compile-latex.yml
@@ -29,3 +29,4 @@ jobs:
           publish_branch: gh-pages
           publish_dir: public
           destination_dir: assets
+          enable_jekyll: true
