--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Mathcounts Cheat Sheet
+description: Take advantage of this free, open, community-improved resource to cover the main facts to know for the Mathcounts competitions.
